--- a/static/styles.css
+++ b/static/styles.css
@@ -12,6 +12,11 @@ body {
 }
 
 #button:hover {
+  background-color: #07c;
+  border: 3px solid #555;
+}
+
+#button:active {
   background-color: #2bf;
   border: 3px solid #777;
 }
