--- a/static/styles.css
+++ b/static/styles.css
@@ -1,22 +1,22 @@
 body {
-  margin: 0;
-  padding: 20%;
+  margin: auto 0;
+  text-align: center;
   background-color: #444;
 }
 
 #button {
-  padding: 20%;
-  background-color: #09d;
+  display: block;
+  width: 512px;
+  height: 512px;
+  background-image: url("/static/button-bg.png");
   border: 3px solid #666;
   color: #ddd;
 }
 
 #button:hover {
-  background-color: #07c;
   border: 3px solid #555;
 }
 
 #button:active {
-  background-color: #2bf;
   border: 3px solid #777;
 }
